Wed Jan  4 18:44:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * netsvcs/lib/Client_Logging_Handler.cpp:
          Fixed 64bit conversion warning

Wed Jan  4 11:04:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/templates/gnu.mpd:
          Generate LIBNAME and PRJ_TYPE, needed for VxWorks rtp support

Wed Jan  4 10:49:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-vxworks6.2.h:
          In rtp mode we can't access the WIND_TCB struct anymore, meaning
          that the TSS emulation can't work anymore.

        * ace/OS_NS_Thread.{h,cpp,inl}:
          Only call the native tss methods when they are available

Wed Jan  4 09:39:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/sys/os_time.h:
          Added workaround for VxWorks 6.2 that defines timeval in time.h

        * ace/High_Res_Timer.cpp:
        * ace/OS_NS_time.inl:
        * ace/README:
        * ace/Time_Value.inl:
          Removed checks for !ACE_HAS_BROKEN_TIMESPEC_MEMBERS, this define
          is not set in any config file, so zapped it

Wed Jan  4 08:30:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-vxworks6.2.h:
          Improved support for the diab compiler

        * ace/TTY_IO.cpp:
          Only define the const char arrays when they are going to be
          used. Fixes unused variable warnings with vxworks

        * ace/OS_NS_dlfcn.inl:
        * ace/OS_NS_stropts.inl:
        * ace/OS_NS_sys_socket.inl:
        * ace/OS_NS_Thread.h:
        * ace/os_include/os_dirent.h:
        * ace/os_include/os_fcntl.h:
        * ace/os_include/os_limits.h:
        * ace/os_include/os_netdb.h:
        * ace/os_include/os_stropts.h:
        * ace/os_include/sys/os_socket.h:
        * ace/os_include/sys/os_un.h:
          Made VxWorks specific includes dependent on the VxWorks version.