@@ -1,3 +1,9 @@
+Wed Jan  4 19:50:27 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>
+
+        * bin/ChangeLogEditor/ChangeLogEntry.pm:
+
+          Modified this to use UTC instead of local time.
+
 Wed Jan  4 18:44:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * netsvcs/lib/Client_Logging_Handler.cpp:
